<resources>
    <string name="app_name">Test1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="element_text">Element</string>

    <string name="profile_firstname">Имя:</string>
    <string name="profile_secondname">Фамилия:</string>
    <string name="profile_birthyear">Год рождения:</string>
    <string name="profile_birthplace">Город:</string>
    <string name="profile_position">Должность:</string>

    <string name="main_list_title">Список сотрудников</string>
    <string name="new_item_title">Добавление</string>
    <string name="edit_item_title">Редактирование</string>

    <string name="year_legend_1">год</string>
    <string name="year_legend_2">года</string>
    <string name="year_legend_3">лет</string>

    <string-array name="places_array">
        <item>Киев</item>
        <item>Харьков</item>
        <item>Одесса</item>
        <item>Львов</item>
    </string-array>

    <string-array name="positions_array">
        <item>врач</item>
        <item>фармацевт</item>
        <item>медсестра</item>
        <item>водитель</item>
    </string-array>



</resources>
