<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:orientation="vertical"
    android:background="@color/list_item_fragment_color"
    tools:context=".ListItemFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="0dp"
        android:isScrollContainer="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollable_body"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginLeft="@dimen/profile_hmargins2"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/firstname_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile_firstname"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_marginLeft="@dimen/profile_hmargins"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/firstname_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollHorizontally="true"
                android:background="@android:drawable/edit_text"

                android:inputType="textCapWords|textFilter"
                android:imeOptions="actionDone"
                android:autoText="false"
                android:capitalize="words"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="fill_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_marginLeft="@dimen/profile_hmargins2"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:layout_marginTop="@dimen/profile_vmargins"
                android:id="@+id/secondname_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile_secondname"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:layout_marginLeft="@dimen/profile_hmargins"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/secondname_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scrollHorizontally="true"
                android:background="@android:drawable/edit_text"
                android:inputType="textCapWords|textFilter"
                android:imeOptions="actionDone"
                android:autoText="false"
                android:capitalize="words"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="fill_horizontal|center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_vmargins"
            android:paddingTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_marginLeft="@dimen/profile_hmargins2"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/birthyear_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile_birthyear"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/birthyear_picker"
                android:layout_gravity="left" />

        </LinearLayout>

            <TextView
                android:layout_marginLeft="@dimen/profile_hmargins2"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/birthplace_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile_birthplace"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:layout_marginLeft="@dimen/profile_hmargins"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:id="@+id/birthplace_edit"
                android:background="@android:drawable/edit_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                android:layout_marginLeft="@dimen/profile_hmargins2"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:layout_marginTop="@dimen/profile_vmargins"
                android:id="@+id/position_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/profile_position"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:layout_marginLeft="@dimen/profile_hmargins"
                android:layout_marginRight="@dimen/profile_hmargins"
                android:layout_marginBottom="16dp"
                android:id="@+id/position_edit"
                android:background="@android:drawable/edit_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>